versao nova ale + gab